[imprint] legal notice - Gründungsgesellschaft

--- a/contact-de.html
+++ b/contact-de.html
@@ -11,7 +11,7 @@ priority: 90
 <p>Sie erreichen uns über</p>
 
 <address>
-  <strong>ChainSquad</strong><br />
+  <strong>{{site.name}}</strong><br />
   Hauptstraße 3<br />
   90584 Veitsbronn / Germany<br />
   <abbr title="Mail"><i class="fa fa-envelope"></i></abbr>: info@chainsquad.com
