New address for contstruction site

--- a/contact-de.html
+++ b/contact-de.html
@@ -17,6 +17,14 @@ priority: 90
   <abbr title="Mail"><i class="fa fa-envelope"></i></abbr>: info@chainsquad.com
 </address>
 
+<p>an unserer Betriebsstätte in</p>
+
+<p><strong>{{site.name}}</strong><br />
+Am Weichselgarten 7<br />
+91058 Erlangen / Germany<br/>
+Als Teil des IGZ Innovations- und Gründerzentrum Nürnberg-Fürth-Erlangen GmbH<br />
+</p>
+
 <p>oder über das anschließende Formular. Wir geben unser bestes Ihre
 Anfrage sofort zu beantworten!</p>
 
