--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,14 @@ priority: 90
   <abbr title="Mail"><i class="fa fa-envelope"></i></abbr>: info@chainsquad.com
 </address>
 
+<p>at our production site</p>
+<p>
+<strong>{{site.name}}</strong><br />
+Am Weichselgarten 7<br />
+91058 Erlangen / Germany<br/>
+As member of the IGZ Innovations- und Gründerzentrum Nürnberg-Fürth-Erlangen GmbH<br/>
+</p>
+
 <p>or by using the form below. We do our best to answer your inquiry in
 no time.</p>
 
