--- a/contact-de.html
+++ b/contact-de.html
@@ -12,8 +12,8 @@ priority: 90
 
 <address>
   <strong>{{site.name}}</strong><br />
-  Hauptstraße 3<br />
-  90584 Veitsbronn / Germany<br />
+  Hirtenweg 14<br />
+  91054 Buckenhof / Germany<br />
   <abbr title="Mail"><i class="fa fa-envelope"></i></abbr>: info@chainsquad.com
 </address>
 
