--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link id="favicon" rel="icon" type="image/x-icon" href="static/img/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+
+    <meta name="description" content="A forward-thinking tech company operating in both Web2 and Web3 spheres, utilizing cutting-edge web technologies, DevOps practices, and cloud services to deliver comprehensive full-stack solutions, seamlessly managing Web2 and Web3 software infrastructures for optimal efficiency." />
+    <meta property="og:title" content="ChainSquad GmbH: Your partner in web* development and operations" />
+    <meta property="og:description" content="Web* development Company based in Germany" />
+    <meta property="og:image" content="/img/logo.png" />
+    <meta property="og:url" content="https://relay.md" />
+
     <title>ChainSquad GmbH</title>
+
+    <link id="favicon" rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Lato:400,700" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
