add imprint link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
           <img src="/img/logo.png" />
           <p class="is-medium">ChainSquad GmbH</p>
           <p class="is-small help">Developing web<sup><tt>*</tt></sup> products since 2017</p>
-          <a href="/contact.html" class="is-small help">Contact</a>
+          <div class="column is-2 is-offset-5">
+            <div class="level">
+              <div class="level-item">
+                <a href="/contact.html" class="is-small help">Contact</a>
+              </div>
+              <div class="level-item">
+                <a href="/imprint.html" class="is-small help">Imprint</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
