--- a/index.html
+++ b/index.html
@@ -1,58 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="content-language" content="en">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
-    <meta name="description" content="A forward-thinking tech company operating in both Web2 and Web3 spheres, utilizing cutting-edge web technologies, DevOps practices, and cloud services to deliver comprehensive full-stack solutions, seamlessly managing Web2 and Web3 software infrastructures for optimal efficiency." />
-    <meta property="og:title" content="ChainSquad GmbH: Your partner in web* development and operations" />
-    <meta property="og:description" content="Web* development Company based in Germany" />
-    <meta property="og:image" content="/img/logo.png" />
-    <meta property="og:url" content="https://relay.md" />
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="content-language" content="en">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
-    <title>ChainSquad GmbH</title>
+  <meta name="description"
+    content="A forward-thinking tech company operating in both Web2 and Web3 spheres, utilizing cutting-edge web technologies, DevOps practices, and cloud services to deliver comprehensive full-stack solutions, seamlessly managing Web2 and Web3 software infrastructures for optimal efficiency." />
+  <meta property="og:title" content="ChainSquad GmbH: Your partner in web* development and operations" />
+  <meta property="og:description" content="Web* development Company based in Germany" />
+  <meta property="og:image" content="/img/logo.png" />
+  <meta property="og:url" content="https://relay.md" />
 
-    <link id="favicon" rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:400,700" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <section class="hero is-fullheight">
-      <div class="hero-body has-text-centered">
-        <div class="container">
-          <img src="/img/logo.png" />
-          <p class="is-medium">ChainSquad GmbH</p>
-          <p class="is-small help">Developing web<sup><tt>*</tt></sup> products since 2017</p>
-          <div class="column is-2 is-offset-5">
-            <div class="level">
-              <div class="level-item">
-                <a href="/contact.html" class="is-small help">Contact</a>
-              </div>
-              <div class="level-item">
-                <a href="/imprint.html" class="is-small help">Imprint</a>
-              </div>
+  <title>ChainSquad GmbH</title>
+
+  <link id="favicon" rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:400,700" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <section class="hero is-fullheight">
+    <div class="hero-body has-text-centered">
+      <div class="container">
+        <img src="/img/logo.png" />
+        <p class="is-medium">ChainSquad GmbH</p>
+        <p class="is-small help">Developing web<sup><tt>*</tt></sup> products since 2017</p>
+        <div class="column is-2 is-offset-5">
+          <div class="level">
+            <div class="level-item">
+              <a href="/contact.html" class="is-small help">Contact</a>
+            </div>
+            <div class="level-item">
+              <a href="/imprint.html" class="is-small help">Imprint</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-  </body>
-  <script src="/js/script.js"></script>
-  <script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script>
-  <script>
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//matomo.infra.chainsquad.com/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '2']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-  </script>
+    </div>
+  </section>
+</body>
+<script src="/js/script.js"></script>
+<script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script>
+<script defer data-domain="chainsquad.com" src="https://p.chainsquad.com/js/script.js"></script>
+
 </html>
